<resources>
    <string name="app_name">MobileHealthacre_Android_Services</string>
    <string name="preview">Preview</string>
    <string name="zipcode">Zipcode:</string>
    <string name="town">Town:</string>
    <string name="street_name">Street name:</string>
    <string name="street_no">Street no:</string>
    <string name="city">City:</string>
    <string name="id">Id:</string>
    <string name="please_fill_in_your_details">Please fill in your details</string>
    <string name="please_fill_in_you_detials">please fill in you detials</string>
    <string name="preview_data">Preview data</string>
    <string name="home">Home</string>
</resources>
